# wikiquote

./: .gitignore  .mypy.ini  .travis.yml  CHANGELOG.md  DOCUMENTATION.md  LICENSE  MANIFEST  MANIFEST.in  Makefile  README.md  README.rst  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  wikiquote.py  wikiquoteFr.py
.github/: dependabot.yml
.github/workflows/: test.yaml  test.yml
tests/: qotd_test.py  quotes_test.py  search_test.py  test_category.py  test_qotd.py  test_quotes.py  test_quotes_print.py  test_random_titles.py  test_search.py  test_supported_langs.py
util/: manual_checks.py
wikiquote/: __init__.py  constants.py  qotd.py  quotes.py  utils.py
wikiquote/langs/: __init__.py  de.py  en.py  es.py  eu.py  fr.py  he.py  it.py  pl.py  pt.py
