[tool.poetry]
name = "wikiquote"
version = "0.1.17"
description = "Retrieve quotes from any Wikiquote article."
authors = ["Federico Tedin <federicotedin@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.2"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
black = "==23.7.0"
isort = "==5.12.0"
pytest = "*"
mypy = "*"
twine = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true

# [[tool.mypy.overrides]]
# module = [
#     "somelibrary",
# ]
# ignore_missing_imports = true
