[tool.poetry]
name = "wikiquote"
version = "0.1.17"
description = "Retrieve quotes from any Wikiquote article."
authors = ["Federico Tedin <federicotedin@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["quotes", "wikiquote", "python", "api", "qotd", "quote", "day"]
classifiers = ["Programming Language :: Python :: 3 :: Only", "License :: OSI Approved :: MIT License", "Topic :: Utilities"]
repository = "https://github.com/federicotdn/wikiquote"
homepage = "https://github.com/federicotdn/wikiquote"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.2"

[tool.poetry.group.dev.dependencies]
black = "==23.7.0"
isort = "==5.12.0"
ruff = "*"
pytest = "*"
mypy = "*"
twine = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
