[project]
name = "wikiquote"
version = "0.1.17"
description = "Retrieve quotes from any Wikiquote article."
authors = [{ name = "Federico Tedin", email = "federicotedin@gmail.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "quotes",
    "wikiquote",
    "python",
    "api",
    "qotd",
    "quote",
    "day",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
]
dependencies = ["lxml~=5.4"]

[project.urls]
Homepage = "https://github.com/federicotdn/wikiquote"
Repository = "https://github.com/federicotdn/wikiquote"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "mypy",
    "twine",
    "lxml-stubs"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["I"]

[tool.mypy]
warn_unused_configs = true
